# SkycardsDB

./: Cargo.toml  RUST_README.md  Refresh.py  ach_emoji_map.json  api_test.py  api_test.sh  generate_emoji_map.py  gui.py  refresh.sh  requirements.txt  skycards_export.sh  skycards_user.json  web.py
data/DB/: highscore.db  highscore.db-shm  highscore.db-wal
src/: api_test.rs  refresh.rs
templates/: index.html  user.html
